implemented search via matching title