@@ -5,6 +5,9 @@
  */
 public interface Searchable {
 
+    //sorry my launch.json doesnt sync so i need this here T_T
+    //"vmArgs": "--module-path \"C:/Program Files/Java/javafx-sdk-23/lib\" --add-modules javafx.controls,javafx.fxml",
+
     /**
      * Requires that searchable games must have a boolean representing if a game matches the search
      * Why: For consistency + flexibility to implement child game classes of the game parent class if needed
